; ModuleID = '/home/carl/AnghaBench/sway/swaybar/tray/extr_host.c_handle_sni_registered.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/tray/extr_host.c_handle_sni_registered.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swaybar_tray = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@SWAY_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [41 x i8] c"Failed to parse register SNI message: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @handle_sni_registered to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_sni_registered(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.swaybar_tray*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @sd_bus_message_read(i32* %10, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %7)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load i32, i32* @SWAY_ERROR, align 4
  %16 = load i32, i32* %8, align 4
  %17 = sub nsw i32 0, %16
  %18 = call i32 @strerror(i32 %17)
  %19 = call i32 @sway_log(i32 %15, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %14, %3
  %21 = load i8*, i8** %5, align 8
  %22 = bitcast i8* %21 to %struct.swaybar_tray*
  store %struct.swaybar_tray* %22, %struct.swaybar_tray** %9, align 8
  %23 = load %struct.swaybar_tray*, %struct.swaybar_tray** %9, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 @add_sni(%struct.swaybar_tray* %23, i8* %24)
  %26 = load i32, i32* %8, align 4
  ret i32 %26
}

declare dso_local i32 @sd_bus_message_read(i32*, i8*, i8**) #1

declare dso_local i32 @sway_log(i32, i8*, i32) #1

declare dso_local i32 @strerror(i32) #1

declare dso_local i32 @add_sni(%struct.swaybar_tray*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
